--- a/D3_data_journalism/assets/css/d3Style.css
+++ b/D3_data_journalism/assets/css/d3Style.css
@@ -50,6 +50,8 @@
   text-transform: capitalize;
   background: rgba(0, 0, 0, 0.8);
   border-radius: 4px;
+  opacity: 1;
+  position: absolute;
 }
 
 /* Mobile Rules */
